Add socket support

--- a/webserver/static/index.html
+++ b/webserver/static/index.html
@@ -38,9 +38,9 @@
 
         </div>
 
-        <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
-        <script src="https://code.createjs.com/createjs-2015.11.26.combined.js"></script>
-        <script src="https://hammerjs.github.io/dist/hammer.js"></script>
+        <script src="webrtc-lib.js"></script>
+        <script src="createjs-lib.js"></script>
+        <script src="hammer-lib.js"></script>
 
         <script src="joystick.js"></script>
         <script src="webrtc.js"></script>
