Add remote control

--- a/webserver/static/index.html
+++ b/webserver/static/index.html
@@ -31,8 +31,8 @@
             <div>
                 <div class="container space-top">
                     <h1 class="center blue-text thin">Drone Joystick</h1>
-                    <canvas id="joystick-left" class="joystick" height="300" width="300"></canvas>
-                    <canvas id="joystick-right" class="joystick" height="300" width="300"></canvas>
+                    <canvas id="joystick-left" class="joystick left" height="300" width="300"></canvas>
+                    <canvas id="joystick-right" class="joystick right" height="300" width="300"></canvas>
                 </div>
             </div>
 
